# rp-pico-projects

./: README.md
bme280_spi/: CMakeLists.txt  bme280_spi.c  humidity.txt  pressure.txt  script.py  temperature.txt
hello_adc/: CMakeLists.txt  hello_adc.c  sample.csv  sample.txt  script2.py
hello_ili9341/: CMakeLists.txt  hello_ili9341.c
hello_ili9341/ant-lab/: CMakeLists.txt  ant-lab.c  ant-lab.h
hello_ili9341/fonts/: CMakeLists.txt
hello_ili9341/fonts/src/: fonts.c
hello_ili9341/gradient/: CMakeLists.txt
hello_ili9341/gradient/include/gradient/: gradient.h
hello_ili9341/gradient/src/: gradient.c
hello_ili9341/ili9341/: CMakeLists.txt
hello_ili9341/ili9341/include/ili9341/: ili9341.h
hello_ili9341/ili9341/src/: ili9341.c
hello_ili9341/square-swarm/: CMakeLists.txt
hello_ili9341/square-swarm/include/square-swarm/: square-swarm.h
hello_ili9341/square-swarm/src/: square-swarm.c
hello_usb/: CMakeLists.txt  hello_usb.c
read-from-uart/: CMakeLists.txt  read-from-uart.c  script1.py
